Update 'go-yhljhoiv' component image to: quay.io/rhtap_qe/go-yhljhoiv:08e485961f6db8fefaa0aeb3f56baea7152e4fa8@sha256:701890a0fe92f2f79a725d8ea24b1ae2e8b02924be0b0d12a66ce330c41b6c52

--- a/components/go-yhljhoiv/overlays/development/deployment-patch.yaml
+++ b/components/go-yhljhoiv/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-yhljhoiv
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-yhljhoiv:08e485961f6db8fefaa0aeb3f56baea7152e4fa8@sha256:701890a0fe92f2f79a725d8ea24b1ae2e8b02924be0b0d12a66ce330c41b6c52
+          name: container-image
